<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/content_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/exit_and_entry" />

    <TextView
        android:id="@+id/header"
        style="@style/firstAndLastHeaderStyle"
        android:fontFamily="@font/quattrocento_sans"
        android:paddingStart="@dimen/padding_start_and_end"
        android:paddingTop="@dimen/padding_top_and_bottom"
        android:paddingEnd="@dimen/padding_start_and_end"
        android:paddingBottom="@dimen/padding_top_and_bottom"
        android:text="@string/first_screen_header_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        style="@style/screensHeaderStyle"
        android:text="@string/first_screen_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/backgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

</androidx.constraintlayout.widget.ConstraintLayout>